HTML based project and to be improvised

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </P>
     <h2>List of RECEPIES</h2>
     <ul>
-        <li><a href="//home/harshan/Documents/odin-recepies/recepies/whitesausepasta.html" ,target="_self">White sause pasta</a></li>
-        <li><a href="/home/harshan/Documents/odin-recepies/recepies/Dindugalbiriyani.html" ,target="_self">DINDUGAL BIRIYANI</a></li>
-        <li><a href="/home/harshan/Documents/odin-recepies/recepies/Bananacake.html" ,target="_self">Choco-Banana Wheat Cake</a></li>
+        <li><a href="recepies/whitesausepasta.html" ,target="_self">White sause pasta</a></li>
+        <li><a href="recepies/Dindugalbiriyani.html" ,target="_self">DINDUGAL BIRIYANI</a></li>
+        <li><a href="recepies/Bananacake.html" ,target="_self">Choco-Banana Wheat Cake</a></li>
     </ul>
     <p>This are some recepies i think i am well verse.And u can check it out and try </p>
     <p>REVIEWS on</p>
