HTML based project and to be improvised

--- a/recepies/Bananacake.html
+++ b/recepies/Bananacake.html
@@ -21,7 +21,7 @@
          Steamed banana cake is found in Chinese, Malaysian, Indonesian and Vietnamese cuisine.[1][2][3] In the Philippines,
           the term "banana cake" refers 
         to banana bread introduced during the American colonial period of the Philippines.[ </p>
-        <p><img src="/home/harshan/Documents/odin-recepies/cake.jpeg"></p>
+        <p><img src="cake.jpeg"></p>
         <p>SERVES 4</p>
         <h2 id="Ingredients">INGREDIENTS CHECK LIST</h2>
     <ol>
@@ -48,7 +48,7 @@
            <li>Take it out of the oven and let it cold down completely. Cut and serve</li>
            
         </ol>
-        <a href="/home/harshan/Documents/odin-recepies/index.html">Main page</a>
+        <a href="index.html">Main page</a>
 
         
 </body>
