--- a/recepies/Dindugalbiriyani.html
+++ b/recepies/Dindugalbiriyani.html
@@ -17,7 +17,7 @@
          distinct flavor profile and use of seeraga samba rice. It's characterized by a balance of spices, tender meat, and a unique flavor
          that distinguishes it from other types of biryani. </p>
          <p>SERVES 4</p>
-        <p><img src="/home/harshan/Documents/odin-recepies/dindugal.jpeg"></p>
+        <p><img src="dindugal.jpeg"></p>
         <h2 id="Ingredients">INGREDIENTS CHECK LIST</h2>
     <ol>
         <li><input type="checkbox">Cinnamon</li>
