--- a/recepies/whitesausepasta.html
+++ b/recepies/whitesausepasta.html
@@ -15,7 +15,7 @@
     <h1 id="about">ABOUT</h1>
     <p>White sauce pasta is pasta tossed in a creamy white sauce, typically made with butter, flour, 
         and milk, often with added cheese for a richer flavor. This sauce is also known as béchamel sauce. </p>
-        <p><img src="/home/harshan/Documents/odin-recepies/recepies/whitesause.jpeg"></p>
+        <p><img src="whitesause.jpeg"></p>
         <p>SERVES 4</p>
         <h2 id="Ingredients"> INGREDIENTS CHECK LIST</h2>
     <ol>
@@ -48,7 +48,7 @@
             <li>Remove from heat and serve.</li>
 
         </ol>
-        <a href="/home/harshan/Documents/odin-recepies/index.html">Main page</a>
+        <a href="index.html">Main page</a>
 
         
 </body>
