--- a/recepies/Dindugalbiriyani.html
+++ b/recepies/Dindugalbiriyani.html
@@ -73,7 +73,7 @@
 
 
         </ol>
-        <a href="/home/harshan/Documents/odin-recepies/index.html">Main page</a>
+        <a href="index.html">Main page</a>
 
         
 </body>
