--- a/recepies/Bananacake.html
+++ b/recepies/Bananacake.html
@@ -48,7 +48,7 @@
            <li>Take it out of the oven and let it cold down completely. Cut and serve</li>
            
         </ol>
-        <a href="odin-recepies/index.html">Main page</a>
+        <a href="../index.html">Main page</a>
 
         
 </body>
