--- a/recepies/whitesausepasta.html
+++ b/recepies/whitesausepasta.html
@@ -48,7 +48,7 @@
             <li>Remove from heat and serve.</li>
 
         </ol>
-        <a href="odin-recepies/index.html">Main page</a>
+        <a href="../index.html">Main page</a>
 
         
 </body>
